examples/kustomize/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-canary
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
