examples/kustomize/base/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-stable
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
