examples/kustomize/base/argocd-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argoapp-virtualservice
spec:
  gateways:
    - demo-app-gateway
  hosts:
    - argo-demo.mario.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - "argo-demo.mario.com"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
